welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: type mismatch;
 found   : java.awt.Color
 required: String
    couleur = getCouleurSol()
                           ^